@@ -5,6 +5,9 @@ Release 5.2.2 (unreleased)
 Bug fixes
 ---------
 
+- Compressible: fix density time scheme in transported passive scalar/vector
+  balance to ensure conservativity with compressible algorithm.
+
 - Avoid error preventing run when checking remaining time using SLURM job array.
 
 - Fixes for parallel runs in sedimentation source term with humid atmosphere
